tried to get K for each point of data_traite. Difficulty to acces to K value in param object...

--- a/pyheatmy/research/which_point_highest_K_val.ipynb
+++ b/pyheatmy/research/which_point_highest_K_val.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        " 'point53_temperature_traité.csv']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,46 +78,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              dates  temperature_stream        dH\n",
-      "0  23-07-2015 14:00              18.224  0.085864\n",
-      "1  23-07-2015 14:15              18.081  0.086153\n",
-      "2  23-07-2015 14:30              18.057  0.086189\n",
-      "3  23-07-2015 14:45              18.057  0.086257\n",
-      "4  23-07-2015 15:00              18.176  0.086072\n",
-      "              dates  Temp_profondeur_10  Temp_profondeur_20  \\\n",
-      "0  23-07-2015 14:00              18.319              17.938   \n",
-      "1  23-07-2015 14:15              18.224              17.653   \n",
-      "2  23-07-2015 14:30              18.105              17.558   \n",
-      "3  23-07-2015 14:45              18.081              17.534   \n",
-      "4  23-07-2015 15:00              18.057              17.510   \n",
-      "\n",
-      "   Temp_profondeur_30  Temp_profondeur_40  \n",
-      "0              18.247              18.390  \n",
-      "1              17.915              17.986  \n",
-      "2              17.796              17.796  \n",
-      "3              17.748              17.748  \n",
-      "4              17.724              17.724  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Point considéré\n",
+    "#Fonction pour convertir les dates en datetime\n",
     "\n",
-    "point_pression = 'point13_pression_traité.csv'\n",
-    "point_temperature = 'point13_temperature_traité.csv'\n",
+    "def convertDates(df: pd.DataFrame):\n",
+    "    \"\"\"\n",
+    "    Convert dates from a list of strings by testing several different input formats\n",
+    "    Try all date formats already encountered in data points\n",
+    "    If none of them is OK, try the generic way (None)\n",
+    "    If the generic way doesn't work, this method fails\n",
+    "    (in that case, you should add the new format to the list)\n",
+    "    \n",
+    "    This function works directly on the giving Pandas dataframe (in place)\n",
+    "    This function assumes that the first column of the given Pandas dataframe\n",
+    "    contains the dates as characters string type\n",
+    "    \n",
+    "    For datetime conversion performance, see:\n",
+    "    See https://stackoverflow.com/questions/40881876/python-pandas-convert-datetime-to-timestamp-effectively-through-dt-accessor\n",
+    "    \"\"\"\n",
+    "    formats = (\"%m/%d/%y %H:%M:%S\", \"%m/%d/%y %I:%M:%S %p\",\n",
+    "               \"%d/%m/%y %H:%M\",    \"%d/%m/%y %I:%M %p\",\n",
+    "               \"%m/%d/%Y %H:%M:%S\", \"%m/%d/%Y %I:%M:%S %p\", \n",
+    "               \"%d/%m/%Y %H:%M\",    \"%d/%m/%Y %I:%M %p\",\n",
+    "               \"%y/%m/%d %H:%M:%S\", \"%y/%m/%d %I:%M:%S %p\", \n",
+    "               \"%y/%m/%d %H:%M\",    \"%y/%m/%d %I:%M %p\",\n",
+    "               \"%Y/%m/%d %H:%M:%S\", \"%Y/%m/%d %I:%M:%S %p\", \n",
+    "               \"%Y/%m/%d %H:%M\",    \"%Y/%m/%d %I:%M %p\",\n",
+    "               None)\n",
+    "    times = df[df.columns[0]]\n",
+    "    for f in formats:\n",
+    "        try:\n",
+    "            # Convert strings to datetime objects\n",
+    "            new_times = pd.to_datetime(times, format=f)\n",
+    "            # Convert datetime series to numpy array of integers (timestamps)\n",
+    "            new_ts = new_times.values.astype(np.int64)\n",
+    "            # If times are not ordered, this is not the appropriate format\n",
+    "            test = np.sort(new_ts) - new_ts\n",
+    "            if np.sum(abs(test)) != 0 :\n",
+    "                #print(\"Order is not the same\")\n",
+    "                raise ValueError()\n",
+    "            # Else, the conversion is a success\n",
+    "            #print(\"Found format \", f)\n",
+    "            df[df.columns[0]] = new_times\n",
+    "            return\n",
+    "        \n",
+    "        except ValueError:\n",
+    "            #print(\"Format \", f, \" not valid\")\n",
+    "            continue\n",
+    "    \n",
+    "    # None of the known format are valid\n",
+    "    raise ValueError(\"Cannot convert dates: No known formats match your data!\")\n",
     "\n",
-    "#Définition d'un dictionnaire pour les données \n",
-    "\n",
-    "dico = {}\n",
-    "dico['chemin pression'] = os.path.join(path, point_pression)\n",
-    "dico['chemin temperature'] = os.path.join(path, point_temperature)\n",
+    "#Fonction pour lire les fichiers csv\n",
     "\n",
     "#Lecture des données\n",
     "\n",
@@ -133,10 +148,74 @@
     "    else:\n",
     "        data_frame = pd.read_csv(chemin_fichier, sep=detecter_separateur)\n",
     "\n",
-    "    return data_frame \n",
+    "    return data_frame "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                dates  temperature_stream        dH\n",
+      "0 2015-07-23 14:00:00             291.374  0.085864\n",
+      "1 2015-07-23 14:15:00             291.231  0.086153\n",
+      "2 2015-07-23 14:30:00             291.207  0.086189\n",
+      "3 2015-07-23 14:45:00             291.207  0.086257\n",
+      "4 2015-07-23 15:00:00             291.326  0.086072\n",
+      "                dates  Temp_profondeur_10  Temp_profondeur_20  \\\n",
+      "0 2015-07-23 14:00:00             291.469             291.088   \n",
+      "1 2015-07-23 14:15:00             291.374             290.803   \n",
+      "2 2015-07-23 14:30:00             291.255             290.708   \n",
+      "3 2015-07-23 14:45:00             291.231             290.684   \n",
+      "4 2015-07-23 15:00:00             291.207             290.660   \n",
+      "\n",
+      "   Temp_profondeur_30  Temp_profondeur_40  \n",
+      "0             291.397             291.540  \n",
+      "1             291.065             291.136  \n",
+      "2             290.946             290.946  \n",
+      "3             290.898             290.898  \n",
+      "4             290.874             290.874  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_15056\\2964212467.py:31: UserWarning: Parsing dates in %d-%m-%Y %H:%M format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  new_times = pd.to_datetime(times, format=f)\n",
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_15056\\2964212467.py:31: UserWarning: Parsing dates in %d-%m-%Y %H:%M format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  new_times = pd.to_datetime(times, format=f)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Point considéré\n",
+    "\n",
+    "point_pression = 'point13_pression_traité.csv'\n",
+    "point_temperature = 'point13_temperature_traité.csv'\n",
+    "\n",
+    "#Définition d'un dictionnaire pour les données \n",
+    "\n",
+    "dico = {}\n",
+    "dico['chemin pression'] = os.path.join(path, point_pression)\n",
+    "dico['chemin temperature'] = os.path.join(path, point_temperature)\n",
     "\n",
     "pression = read_csv(dico['chemin pression'])\n",
     "temperature = read_csv(dico['chemin temperature'])\n",
+    "\n",
+    "pression['temperature_stream'] = pression['temperature_stream'] + ZERO_CELSIUS\n",
+    "temperature['Temp_profondeur_10'] = temperature['Temp_profondeur_10'] + ZERO_CELSIUS\n",
+    "temperature['Temp_profondeur_20'] = temperature['Temp_profondeur_20'] + ZERO_CELSIUS\n",
+    "temperature['Temp_profondeur_30'] = temperature['Temp_profondeur_30'] + ZERO_CELSIUS\n",
+    "temperature['Temp_profondeur_40'] = temperature['Temp_profondeur_40'] + ZERO_CELSIUS\n",
+    "\n",
+    "#Conversion des dates en datetime   \n",
+    "convertDates(pression)\n",
+    "convertDates(temperature)\n",
     "\n",
     "dico['pression'] = pression\n",
     "dico['temperature'] = temperature\n",
@@ -149,15 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('23-07-2015 14:00', (0.0858643254074198, 18.224)), ('23-07-2015 14:15', (0.0861528697161693, 18.081)), ('23-07-2015 14:30', (0.0861893984470073, 18.057)), ('23-07-2015 14:45', (0.0862567747756304, 18.057)), ('23-07-2015 15:00', (0.0860715126342083, 18.176))]\n",
-      "[('23-07-2015 14:00', (18.319, 17.938, 18.247, 18.39)), ('23-07-2015 14:15', (18.224, 17.653, 17.915, 17.986)), ('23-07-2015 14:30', (18.105, 17.558, 17.796, 17.796)), ('23-07-2015 14:45', (18.081, 17.534, 17.748, 17.748)), ('23-07-2015 15:00', (18.057, 17.51, 17.724, 17.724))]\n"
+      "[(Timestamp('2015-07-23 14:00:00'), (0.0858643254074198, 291.37399999999997)), (Timestamp('2015-07-23 14:15:00'), (0.0861528697161693, 291.231)), (Timestamp('2015-07-23 14:30:00'), (0.0861893984470073, 291.207)), (Timestamp('2015-07-23 14:45:00'), (0.0862567747756304, 291.207)), (Timestamp('2015-07-23 15:00:00'), (0.0860715126342083, 291.32599999999996))]\n",
+      "[(Timestamp('2015-07-23 14:00:00'), array([291.469, 291.088, 291.397, 291.54 ])), (Timestamp('2015-07-23 14:15:00'), array([291.374, 290.803, 291.065, 291.136])), (Timestamp('2015-07-23 14:30:00'), array([291.255, 290.708, 290.946, 290.946])), (Timestamp('2015-07-23 14:45:00'), array([291.231, 290.684, 290.898, 290.898])), (Timestamp('2015-07-23 15:00:00'), array([291.207, 290.66 , 290.874, 290.874]))]\n"
      ]
     }
    ],
@@ -168,7 +247,7 @@
     "#On commence par créer des listes de tuple pour les données de pression et de température\n",
     "\n",
     "data_pression = list(zip(dico['pression']['dates'], list(zip( dico['pression']['dH'], dico['pression']['temperature_stream']))))\n",
-    "data_temperature = list(zip(dico['temperature']['dates'], zip(dico['temperature']['T_10'], dico['temperature']['T_20'], dico['temperature']['T_30'], dico['temperature']['T_40'])))\n",
+    "data_temperature = list(zip(dico['temperature']['dates'], dico['temperature'][['T_10', 'T_20', 'T_30', 'T_40']].to_numpy()))\n",
     "\n",
     "print (data_pression[:5])\n",
     "print (data_temperature[:5])"
@@ -176,9 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Init Mcmc : 100%|██████████| 1000/1000 [00:09<00:00, 107.24it/s]\n",
+      "Mcmc Computation : 100%|██████████| 400/400 [00:04<00:00, 94.21it/s] \n",
+      "[Parametres(moinslog10IntrinK=15.193567154308063, n=0.17818704753901862, lambda_s=9.309925834479714, rhos_cs=8695844.526146745)]\n",
+      "Parametres(moinslog10IntrinK=15.193567154308063, n=0.17818704753901862, lambda_s=9.309925834479714, rhos_cs=8695844.526146745)\n"
+     ]
+    }
+   ],
    "source": [
     "#On initialise les paramètres de la MCMC et de l'objet column à partir d'un dico\n",
     "\n",
@@ -209,15 +299,78 @@
     "]\n",
     "\n",
     "#On va maintenant lancer la MCMC\n",
-    "\n"
+    "\n",
+    "col.compute_mcmc(\n",
+    "    nb_iter = 400,\n",
+    "    all_priors = all_priors,\n",
+    "    nb_cells = 100,\n",
+    "    sigma2=1.0,\n",
+    "    verbose=False\n",
+    ")\n",
+    "\n",
+    "bestParams = col.get_best_param()\n",
+    "print(bestParams)\n",
+    "print(bestParams[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# On définit une fonction plus générale pour itérer sur tous les points de mesure et stocker les valeurs de perméabilité \n",
+    "\n",
+    "points = os.listdir(path)[1:]\n",
+    "\n",
+    "def compute_MCMC(path, points):\n",
+    "    K_value={}\n",
+    "    k=len(points)/2\n",
+    "    for i in range(k):\n",
+    "        point_pression = points[2*i]\n",
+    "        point_temperature = points[2*i+1]\n",
+    "        dico = {}\n",
+    "        dico['chemin pression'] = os.path.join(path, point_pression)\n",
+    "        dico['chemin temperature'] = os.path.join(path, point_temperature)\n",
+    "        pression = read_csv(dico['chemin pression'])\n",
+    "        temperature = read_csv(dico['chemin temperature'])\n",
+    "        pression['temperature_stream'] = pression['temperature_stream'] + ZERO_CELSIUS\n",
+    "        temperature['Temp_profondeur_10'] = temperature['Temp_profondeur_10'] + ZERO_CELSIUS\n",
+    "        temperature['Temp_profondeur_20'] = temperature['Temp_profondeur_20'] + ZERO_CELSIUS\n",
+    "        temperature['Temp_profondeur_30'] = temperature['Temp_profondeur_30'] + ZERO_CELSIUS\n",
+    "        temperature['Temp_profondeur_40'] = temperature['Temp_profondeur_40'] + ZERO_CELSIUS\n",
+    "        convertDates(pression)\n",
+    "        convertDates(temperature)\n",
+    "        dico['pression'] = pression\n",
+    "        dico['temperature'] = temperature\n",
+    "        dico['temperature'].columns = ['dates', 'T_10', 'T_20', 'T_30', 'T_40']\n",
+    "        data_pression = list(zip(dico['pression']['dates'], list(zip( dico['pression']['dH'], dico['pression']['temperature_stream']))))\n",
+    "        data_temperature = list(zip(dico['temperature']['dates'], dico['temperature'][['T_10', 'T_20', 'T_30', 'T_40']].to_numpy()))\n",
+    "        col_dict = {\n",
+    "            \"river_bed\": .4, \n",
+    "            \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
+    "            \"offset\": .0,\n",
+    "            \"dH_measures\": data_pression,\n",
+    "            \"T_measures\": data_temperature,\n",
+    "            \"sigma_meas_P\": 0.01, #float\n",
+    "            \"sigma_meas_T\": 0.1, #float\n",
+    "        }\n",
+    "        col = Column.from_dict(col_dict)\n",
+    "        col.compute_mcmc(\n",
+    "            nb_iter = 400,\n",
+    "            all_priors = all_priors,\n",
+    "            nb_cells = 100,\n",
+    "            sigma2=1.0, \n",
+    "            verbose=False)"
+   ]
   }
  ],
  "metadata": {
