--- a/pyheatmy/research/which_point_highest_K_val.ipynb
+++ b/pyheatmy/research/which_point_highest_K_val.ipynb
@@ -28,46 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Les points de mesures, en température et en pression, sont les suivants :\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['point13_pression_traité.csv',\n",
-       " 'point13_temperature_traité.csv',\n",
-       " 'point14_pression_traité.csv',\n",
-       " 'point14_temperature_traité.csv',\n",
-       " 'point34_pression_traité.csv',\n",
-       " 'point34_temperature_traité.csv',\n",
-       " 'point35_pression_traité.csv',\n",
-       " 'point35_temperature_traité.csv',\n",
-       " 'point36_pression_traité.csv',\n",
-       " 'point36_temperature_traité.csv',\n",
-       " 'point46_pression_traité.csv',\n",
-       " 'point46_temperature_traité.csv',\n",
-       " 'point47_pression_traité.csv',\n",
-       " 'point47_temperature_traité.csv',\n",
-       " 'point48_pression_traité.csv',\n",
-       " 'point48_temperature_traité.csv',\n",
-       " 'point52_pression_traité.csv',\n",
-       " 'point52_temperature_traité.csv',\n",
-       " 'point53_pression_traité.csv',\n",
-       " 'point53_temperature_traité.csv']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = 'C:/Users/alexa/2A/MOLONARI1D/dataAnalysis/data_traite'\n",
     "\n",
@@ -153,45 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                dates  temperature_stream        dH\n",
-      "0 2015-07-23 14:00:00             291.374  0.085864\n",
-      "1 2015-07-23 14:15:00             291.231  0.086153\n",
-      "2 2015-07-23 14:30:00             291.207  0.086189\n",
-      "3 2015-07-23 14:45:00             291.207  0.086257\n",
-      "4 2015-07-23 15:00:00             291.326  0.086072\n",
-      "                dates  Temp_profondeur_10  Temp_profondeur_20  \\\n",
-      "0 2015-07-23 14:00:00             291.469             291.088   \n",
-      "1 2015-07-23 14:15:00             291.374             290.803   \n",
-      "2 2015-07-23 14:30:00             291.255             290.708   \n",
-      "3 2015-07-23 14:45:00             291.231             290.684   \n",
-      "4 2015-07-23 15:00:00             291.207             290.660   \n",
-      "\n",
-      "   Temp_profondeur_30  Temp_profondeur_40  \n",
-      "0             291.397             291.540  \n",
-      "1             291.065             291.136  \n",
-      "2             290.946             290.946  \n",
-      "3             290.898             290.898  \n",
-      "4             290.874             290.874  \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_15056\\2964212467.py:31: UserWarning: Parsing dates in %d-%m-%Y %H:%M format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  new_times = pd.to_datetime(times, format=f)\n",
-      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_15056\\2964212467.py:31: UserWarning: Parsing dates in %d-%m-%Y %H:%M format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  new_times = pd.to_datetime(times, format=f)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "point_pression = 'point35_pression_traité.csv'\n",
+    "point_temperature = 'point13_temperature_traité.csv'\n",
+    "\n",
+    "chemin_pression = os.path.join(path,point_pression)\n",
+    "chemin_temperature = os.path.join(path,point_temperature)\n",
+    "\n",
+    "pression = read_csv(chemin_pression)\n",
+    "temperature = read_csv(chemin_temperature)\n",
+    "\n",
+    "#Conversion des dates en datetime\n",
+    "convertDates(pression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Point considéré\n",
     "\n",
@@ -228,18 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(Timestamp('2015-07-23 14:00:00'), (0.0858643254074198, 291.37399999999997)), (Timestamp('2015-07-23 14:15:00'), (0.0861528697161693, 291.231)), (Timestamp('2015-07-23 14:30:00'), (0.0861893984470073, 291.207)), (Timestamp('2015-07-23 14:45:00'), (0.0862567747756304, 291.207)), (Timestamp('2015-07-23 15:00:00'), (0.0860715126342083, 291.32599999999996))]\n",
-      "[(Timestamp('2015-07-23 14:00:00'), array([291.469, 291.088, 291.397, 291.54 ])), (Timestamp('2015-07-23 14:15:00'), array([291.374, 290.803, 291.065, 291.136])), (Timestamp('2015-07-23 14:30:00'), array([291.255, 290.708, 290.946, 290.946])), (Timestamp('2015-07-23 14:45:00'), array([291.231, 290.684, 290.898, 290.898])), (Timestamp('2015-07-23 15:00:00'), array([291.207, 290.66 , 290.874, 290.874]))]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#On va maintenant compute la MCMC pour les données de pression et de température, pour trouver une valeur de \n",
     "#perméabilité pour chaque point de mesure\n",
@@ -255,20 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init Mcmc : 100%|██████████| 1000/1000 [00:09<00:00, 107.24it/s]\n",
-      "Mcmc Computation : 100%|██████████| 400/400 [00:04<00:00, 94.21it/s] \n",
-      "[Parametres(moinslog10IntrinK=15.193567154308063, n=0.17818704753901862, lambda_s=9.309925834479714, rhos_cs=8695844.526146745)]\n",
-      "Parametres(moinslog10IntrinK=15.193567154308063, n=0.17818704753901862, lambda_s=9.309925834479714, rhos_cs=8695844.526146745)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#On initialise les paramètres de la MCMC et de l'objet column à partir d'un dico\n",
     "\n",
@@ -310,22 +236,14 @@
     "\n",
     "bestParams = col.get_best_param()\n",
     "print(bestParams)\n",
-    "print(bestParams[0])\n"
+    "print(bestParams[0].moinslog10IntrinK)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# On définit une fonction plus générale pour itérer sur tous les points de mesure et stocker les valeurs de perméabilité \n",
     "\n",
@@ -333,43 +251,52 @@
     "\n",
     "def compute_MCMC(path, points):\n",
     "    K_value={}\n",
-    "    k=len(points)/2\n",
+    "    k=int(len(points)/2)\n",
     "    for i in range(k):\n",
-    "        point_pression = points[2*i]\n",
-    "        point_temperature = points[2*i+1]\n",
-    "        dico = {}\n",
-    "        dico['chemin pression'] = os.path.join(path, point_pression)\n",
-    "        dico['chemin temperature'] = os.path.join(path, point_temperature)\n",
-    "        pression = read_csv(dico['chemin pression'])\n",
-    "        temperature = read_csv(dico['chemin temperature'])\n",
-    "        pression['temperature_stream'] = pression['temperature_stream'] + ZERO_CELSIUS\n",
-    "        temperature['Temp_profondeur_10'] = temperature['Temp_profondeur_10'] + ZERO_CELSIUS\n",
-    "        temperature['Temp_profondeur_20'] = temperature['Temp_profondeur_20'] + ZERO_CELSIUS\n",
-    "        temperature['Temp_profondeur_30'] = temperature['Temp_profondeur_30'] + ZERO_CELSIUS\n",
-    "        temperature['Temp_profondeur_40'] = temperature['Temp_profondeur_40'] + ZERO_CELSIUS\n",
-    "        convertDates(pression)\n",
-    "        convertDates(temperature)\n",
-    "        dico['pression'] = pression\n",
-    "        dico['temperature'] = temperature\n",
-    "        dico['temperature'].columns = ['dates', 'T_10', 'T_20', 'T_30', 'T_40']\n",
-    "        data_pression = list(zip(dico['pression']['dates'], list(zip( dico['pression']['dH'], dico['pression']['temperature_stream']))))\n",
-    "        data_temperature = list(zip(dico['temperature']['dates'], dico['temperature'][['T_10', 'T_20', 'T_30', 'T_40']].to_numpy()))\n",
-    "        col_dict = {\n",
-    "            \"river_bed\": .4, \n",
-    "            \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
-    "            \"offset\": .0,\n",
-    "            \"dH_measures\": data_pression,\n",
-    "            \"T_measures\": data_temperature,\n",
-    "            \"sigma_meas_P\": 0.01, #float\n",
-    "            \"sigma_meas_T\": 0.1, #float\n",
-    "        }\n",
-    "        col = Column.from_dict(col_dict)\n",
-    "        col.compute_mcmc(\n",
-    "            nb_iter = 400,\n",
-    "            all_priors = all_priors,\n",
-    "            nb_cells = 100,\n",
-    "            sigma2=1.0, \n",
-    "            verbose=False)"
+    "        if points[2*i][5:7] in [ '35', '46', '47', '48']:\n",
+    "            print(f\"Point {points[2*i][5:7]} non pris en compte\")\n",
+    "        else : \n",
+    "            point_pression = points[2*i]\n",
+    "            point_temperature = points[2*i+1]\n",
+    "            dico = {}\n",
+    "            dico['chemin pression'] = os.path.join(path, point_pression)\n",
+    "            dico['chemin temperature'] = os.path.join(path, point_temperature)\n",
+    "            pression = read_csv(dico['chemin pression'])\n",
+    "            temperature = read_csv(dico['chemin temperature'])\n",
+    "            pression['temperature_stream'] = pression['temperature_stream'] + ZERO_CELSIUS\n",
+    "            temperature['Temp_profondeur_10'] = temperature['Temp_profondeur_10'] + ZERO_CELSIUS\n",
+    "            temperature['Temp_profondeur_20'] = temperature['Temp_profondeur_20'] + ZERO_CELSIUS\n",
+    "            temperature['Temp_profondeur_30'] = temperature['Temp_profondeur_30'] + ZERO_CELSIUS\n",
+    "            temperature['Temp_profondeur_40'] = temperature['Temp_profondeur_40'] + ZERO_CELSIUS\n",
+    "            convertDates(pression)\n",
+    "            convertDates(temperature)\n",
+    "            dico['pression'] = pression\n",
+    "            dico['temperature'] = temperature\n",
+    "            dico['temperature'].columns = ['dates', 'T_10', 'T_20', 'T_30', 'T_40']\n",
+    "            data_pression = list(zip(dico['pression']['dates'], list(zip( dico['pression']['dH'], dico['pression']['temperature_stream']))))\n",
+    "            data_temperature = list(zip(dico['temperature']['dates'], dico['temperature'][['T_10', 'T_20', 'T_30', 'T_40']].to_numpy()))\n",
+    "            col_dict = {\n",
+    "                \"river_bed\": .4, \n",
+    "                \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
+    "                \"offset\": .0,\n",
+    "                \"dH_measures\": data_pression,\n",
+    "                \"T_measures\": data_temperature,\n",
+    "                \"sigma_meas_P\": 0.01, #float\n",
+    "                \"sigma_meas_T\": 0.1, #float\n",
+    "            }\n",
+    "            col = Column.from_dict(col_dict)\n",
+    "            col.compute_mcmc(\n",
+    "                nb_iter = 300,\n",
+    "                all_priors = all_priors,\n",
+    "                nb_cells = 100,\n",
+    "                sigma2=1.0, \n",
+    "                verbose=False)\n",
+    "            bestParams = col.get_best_param()\n",
+    "            K_value['point ' + point_pression[5:7]]=bestParams[0].moinslog10IntrinK\n",
+    "            print(K_value)\n",
+    "    return K_value\n",
+    "\n",
+    "compute_MCMC(path, points)\n"
    ]
   }
  ],
