--- a/pyheatmy/research/which_point_highest_K_val.ipynb
+++ b/pyheatmy/research/which_point_highest_K_val.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,8 @@
     "               \"%y/%m/%d %H:%M\",    \"%y/%m/%d %I:%M %p\",\n",
     "               \"%Y/%m/%d %H:%M:%S\", \"%Y/%m/%d %I:%M:%S %p\", \n",
     "               \"%Y/%m/%d %H:%M\",    \"%Y/%m/%d %I:%M %p\",\n",
+    "               \"%d-%m-%Y %H:%M\",  \"%m-%d-%Y %H:%M\",\n",
+    "\n",
     "               None)\n",
     "    times = df[df.columns[0]]\n",
     "    for f in formats:\n",
@@ -116,11 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "point_pression = 'point35_pression_traité.csv'\n",
+    "#debug\n",
+    "\n",
+    "point_pression = 'point52_pression_traité.csv'\n",
     "point_temperature = 'point13_temperature_traité.csv'\n",
     "\n",
     "chemin_pression = os.path.join(path,point_pression)\n",
@@ -253,7 +257,7 @@
     "    K_value={}\n",
     "    k=int(len(points)/2)\n",
     "    for i in range(k):\n",
-    "        if points[2*i][5:7] in [ '35', '46', '47', '48']:\n",
+    "        if points[2*i][5:7] in ['46', '47', '48']:\n",
     "            print(f\"Point {points[2*i][5:7]} non pris en compte\")\n",
     "        else : \n",
     "            point_pression = points[2*i]\n",
