burning OK for mcmc with sigma2. We changed the randomwalk step, ie sigma of sigma2 to 0.01. The max of sigma2 is now 1.

--- a/pyheatmy/demoPyheatmy newDREAM.ipynb
+++ b/pyheatmy/demoPyheatmy newDREAM.ipynb
@@ -538,7 +538,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my_env_311",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
