beginning of the code, gonna work on a copy to avoid erasing the data

--- a/dataAnalysis/data_traite/formatting_data_dates.ipynb
+++ b/dataAnalysis/data_traite/formatting_data_dates.ipynb
@@ -9,15 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
-    "import sys\n",
-    "import re \n",
-    "import numpy as np\n",
-    "import pandas as pd\n"
+    "\n",
+    "path = \"C:/Users/alexa/2A/MOLONARI1D/dataAnalysis/data_traite\"\n",
+    "os.listdir(path)[2:]\n",
+    "\n",
+    "L=['point46_pression_traité.csv', 'point46_temperature_traité.csv', 'point47_pression_traité.csv', 'point47_temperature_traité.csv', 'point48_pression_traité.csv', 'point48_temperature_traité.csv']\n",
+    "l=[]\n",
+    "for file in L:\n",
+    "    with open(path+'/'+file, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "        l.append(lines)\n",
+    "\n"
    ]
   }
  ],
@@ -28,7 +43,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
