--- a/dataAnalysis/data_traite/formatting_data_dates.ipynb
+++ b/dataAnalysis/data_traite/formatting_data_dates.ipynb
@@ -27,12 +27,35 @@
     "os.listdir(path)[2:]\n",
     "\n",
     "L=['point46_pression_traité.csv', 'point46_temperature_traité.csv', 'point47_pression_traité.csv', 'point47_temperature_traité.csv', 'point48_pression_traité.csv', 'point48_temperature_traité.csv']\n",
-    "l=[]\n",
+    "\n",
     "for file in L:\n",
     "    with open(path+'/'+file, 'r') as f:\n",
-    "        lines = f.readlines()\n",
-    "        l.append(lines)\n",
-    "\n"
+    "        data = f.readlines()\n",
+    "        f.close()\n",
+    "    with open('new' + file, 'w') as new_file:\n",
+    "        new_file.write(data[0])\n",
+    "        new_file.write(data[1])\n",
+    "        for i, line in enumerate(data[2:]):\n",
+    "            if k==0:\n",
+    "                if int(line[0:2]) == int(data[i+1][0:2]) or int(line[0:2]) == int(data[i+1][0:2]) + 1:\n",
+    "                    new_file.write(line)\n",
+    "                else:\n",
+    "                    k=1\n",
+    "                    nd = line[3:5]\n",
+    "                    nm = line[0:2]\n",
+    "                    line = nd + line[2] + nm + line[5:]\n",
+    "                    new_file.write(line)\n",
+    "                    data[i+2] = line\n",
+    "            elif k==1:\n",
+    "                nd = line[3:5]\n",
+    "                nm = line[0:2]\n",
+    "                if int(line[3:5])==int(data[i+1][0:2]) or int(line[3:5])==int(data[i+1][0:2])+1:\n",
+    "                    line = nd + line[2] + nm + line[5:]\n",
+    "                    new_file.write(line)\n",
+    "                    data[i+2] = line\n",
+    "                else:\n",
+    "                    k=0\n",
+    "                    new_file.write(line)\n"
    ]
   }
  ],
