creation of new files with formatted data on dates, ready to compute convertDates function

--- a/dataAnalysis/data_traite/formatting_data_dates.ipynb
+++ b/dataAnalysis/data_traite/formatting_data_dates.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os \n",
     "\n",
@@ -29,10 +21,11 @@
     "L=['point46_pression_traité.csv', 'point46_temperature_traité.csv', 'point47_pression_traité.csv', 'point47_temperature_traité.csv', 'point48_pression_traité.csv', 'point48_temperature_traité.csv']\n",
     "\n",
     "for file in L:\n",
+    "    k=0\n",
     "    with open(path+'/'+file, 'r') as f:\n",
     "        data = f.readlines()\n",
     "        f.close()\n",
-    "    with open('new' + file, 'w') as new_file:\n",
+    "    with open('new_' + file, 'w') as new_file:\n",
     "        new_file.write(data[0])\n",
     "        new_file.write(data[1])\n",
     "        for i, line in enumerate(data[2:]):\n",
@@ -55,7 +48,7 @@
     "                    data[i+2] = line\n",
     "                else:\n",
     "                    k=0\n",
-    "                    new_file.write(line)\n"
+    "                    new_file.write(line)"
    ]
   }
  ],
