Assert that convertDates is working, still to compute MCMC on the data + to rename the new files as the old ones

--- a/dataAnalysis/data_traite/formatting_data_dates.ipynb
+++ b/dataAnalysis/data_traite/formatting_data_dates.ipynb
@@ -9,11 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "path = \"C:/Users/alexa/2A/MOLONARI1D/dataAnalysis/data_traite\"\n",
     "os.listdir(path)[2:]\n",
@@ -49,6 +51,84 @@
     "                else:\n",
     "                    k=0\n",
     "                    new_file.write(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convertDates(df: pd.DataFrame):\n",
+    "    \"\"\"\n",
+    "    Convert dates from a list of strings by testing several different input formats\n",
+    "    Try all date formats already encountered in data points\n",
+    "    If none of them is OK, try the generic way (None)\n",
+    "    If the generic way doesn't work, this method fails\n",
+    "    (in that case, you should add the new format to the list)\n",
+    "    \n",
+    "    This function works directly on the giving Pandas dataframe (in place)\n",
+    "    This function assumes that the first column of the given Pandas dataframe\n",
+    "    contains the dates as characters string type\n",
+    "    \n",
+    "    For datetime conversion performance, see:\n",
+    "    See https://stackoverflow.com/questions/40881876/python-pandas-convert-datetime-to-timestamp-effectively-through-dt-accessor\n",
+    "    \"\"\"\n",
+    "    formats = (\"%m/%d/%y %H:%M:%S\", \"%m/%d/%y %I:%M:%S %p\",\n",
+    "               \"%d/%m/%y %H:%M\",    \"%d/%m/%y %I:%M %p\",\n",
+    "               \"%m/%d/%Y %H:%M:%S\", \"%m/%d/%Y %I:%M:%S %p\", \n",
+    "               \"%d/%m/%Y %H:%M\",    \"%d/%m/%Y %I:%M %p\",\n",
+    "               \"%y/%m/%d %H:%M:%S\", \"%y/%m/%d %I:%M:%S %p\", \n",
+    "               \"%y/%m/%d %H:%M\",    \"%y/%m/%d %I:%M %p\",\n",
+    "               \"%Y/%m/%d %H:%M:%S\", \"%Y/%m/%d %I:%M:%S %p\", \n",
+    "               \"%Y/%m/%d %H:%M\",    \"%Y/%m/%d %I:%M %p\",\n",
+    "               None)\n",
+    "    times = df[df.columns[0]]\n",
+    "    for f in formats:\n",
+    "        try:\n",
+    "            # Convert strings to datetime objects\n",
+    "            new_times = pd.to_datetime(times, format=f)\n",
+    "            # Convert datetime series to numpy array of integers (timestamps)\n",
+    "            new_ts = new_times.values.astype(np.int64)\n",
+    "            # If times are not ordered, this is not the appropriate format\n",
+    "            test = np.sort(new_ts) - new_ts\n",
+    "            if np.sum(abs(test)) != 0 :\n",
+    "                #print(\"Order is not the same\")\n",
+    "                raise ValueError()\n",
+    "            # Else, the conversion is a success\n",
+    "            #print(\"Found format \", f)\n",
+    "            df[df.columns[0]] = new_times\n",
+    "            return\n",
+    "        \n",
+    "        except ValueError:\n",
+    "            #print(\"Format \", f, \" not valid\")\n",
+    "            continue\n",
+    "    \n",
+    "    # None of the known format are valid\n",
+    "    raise ValueError(\"Cannot convert dates: No known formats match your data!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_7720\\1511527849.py:29: UserWarning: Parsing dates in %d-%m-%Y %H:%M format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  new_times = pd.to_datetime(times, format=f)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Testing if convertDates works\n",
+    "\n",
+    "df = pd.read_csv('new_point46_pression_traité.csv')\n",
+    "convertDates(df)\n",
+    "\n",
+    "#Working "
    ]
   }
  ],
