notebook run for every point, after new data correctly formatted been merged on the branch.

--- a/pyheatmy/research/which_point_highest_K_val.ipynb
+++ b/pyheatmy/research/which_point_highest_K_val.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
     "    K_value={}\n",
     "    k=int(len(points)/2)\n",
     "    for i in range(k):\n",
-    "        if points[2*i][5:7] in ['46', '47', '48']:\n",
+    "        if points[2*i][5:7] in ['48']: #Created for debug at first to avoid some points. Letting 48 for now as MCMC remain very long to compute, k value approximately 10^-15\n",
     "            print(f\"Point {points[2*i][5:7]} non pris en compte\")\n",
     "        else : \n",
     "            point_pression = points[2*i]\n",
