--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,12 +305,12 @@
     "all_priors = [\n",
     "    ['Couche 1', Zbottom, priors],\n",
     "]\n",
-    "col.compute_mcmc(\n",
-    "    nb_iter = 300,\n",
+    "col.compute_mcmc_DREAM(\n",
     "    all_priors = all_priors,\n",
     "    nb_cells = 100,\n",
-    "    sigma2=1.0,\n",
-    "    verbose=False\n",
+    "    verbose=False,\n",
+    "    nb_iter=500,\n",
+    "    nb_chain=1,\n",
     ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,12 +436,26 @@
     "    ['Couche 2', Zbottom, priors_couche_2],\n",
     "]\n",
     "\n",
-    "col.compute_mcmc(\n",
-    "    nb_iter = 400,\n",
-    "    all_priors = all_priors,\n",
-    "    nb_cells = 100,\n",
-    "    sigma2=1.0,\n",
-    "    verbose=False\n",
+    "#col.compute_mcmc_DREAM(\n",
+    "#    all_priors = all_priors,\n",
+    "#    nb_cells = 100,\n",
+    "#    nb_chain=1,\n",
+    "#    verbose=False\n",
+    "#)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col.compute_mcmc_DREAM(\n",
+    "\tall_priors=all_priors,\n",
+    "\tnb_cells=100,\n",
+    "\tverbose=False,\n",
+    "\tnb_iter=500,\n",
+    "\tnb_chain=1\n",
     ")"
    ]
   },
@@ -484,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,14 +524,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma_prior = Prior((0.1, np.inf), 0.1, lambda x : 1/x)\n",
     "\n",
-    "col.compute_mcmc(\n",
-    "    nb_iter = 400,\n",
+    "col.compute_mcmc_DREAM(\n",
     "    all_priors = all_priors,\n",
     "    nb_cells = 100,\n",
-    "    sigma2_temp_prior = sigma_prior,\n",
-    "    verbose=False\n",
+    "    nb_iter=200,\n",
+    "    nb_chain=10,\n",
+    "    verbose=False,\n",
+    "    typealgo=\"with sigma\"\n",
     ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
@@ -531,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.11.4",
+   "display_name": "my_env_311",
    "language": "python",
    "name": "python3"
   },
