rename compute_mcmc_DREAM in compute_mcmc

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -1,5 +1,5 @@
-{
- "cells": [
+{compute_mcmc
+ "cecompute_mcmc
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -8,7 +8,7 @@
     "\n",
     "This notebook aims to present the various features of `pyheatmy`. It explains how to:\n",
     "- create a `Column` object from an easy reading of dates\n",
-    "- execute the direct model, for homogeneous (section 2)  and heterogeneous (section 3) riverbeds\n",
+    compute_mcmcect model, for homogeneous (section 2)  and heterogeneous (section 3) riverbeds\n",
     "- execute the MCMC\n",
     "- retrieve and display the various results produced during the executions of the direct model or the MCMC\n",
     "\n",
@@ -17,7 +17,7 @@
     "`pyheatmy` is built around the monolithic `Column` class in `core.py`. It can be executed from this class. Calculation, data retrieval, and plotting are methods provided by the `Column` class.\n",
     "\n",
     "It is based on real data, which can be found in the `data` folder.\n",
-    "\n",
+    "compute_mcmc
     "We recommend reading the API for more details. "
    ]
   },
