creation of ts object

--- a/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
+++ b/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
@@ -21,7 +21,135 @@
     "from pyheatmy import *\n",
     "from pyheatmy.time_series_multiperiodic import *\n",
     "import os as os\n",
-    "\n"
+    "import csv as csv \n",
+    "\n",
+    "#function to read the data\n",
+    "def read_csv (chemin_fichier):\n",
+    "    #Detecter separateur\n",
+    "    with open(chemin_fichier, 'r') as file:\n",
+    "        sniffer = csv.Sniffer()\n",
+    "        sample_data = file.read(1024)\n",
+    "        detecter_separateur = (sniffer.sniff(sample_data).delimiter)\n",
+    "\n",
+    "    if \"Titre\" in open(chemin_fichier).readline():\n",
+    "        data_frame = pd.read_csv(chemin_fichier, sep=detecter_separateur, skiprows=1)\n",
+    "    else:\n",
+    "        data_frame = pd.read_csv(chemin_fichier, sep=detecter_separateur)\n",
+    "\n",
+    "    return data_frame \n",
+    "\n",
+    "#Function to convert the dates\n",
+    "\n",
+    "def convertDates(df: pd.DataFrame):\n",
+    "    \"\"\"\n",
+    "    Convert dates from a list of strings by testing several different input formats\n",
+    "    Try all date formats already encountered in data points\n",
+    "    If none of them is OK, try the generic way (None)\n",
+    "    If the generic way doesn't work, this method fails\n",
+    "    (in that case, you should add the new format to the list)\n",
+    "    \n",
+    "    This function works directly on the giving Pandas dataframe (in place)\n",
+    "    This function assumes that the first column of the given Pandas dataframe\n",
+    "    contains the dates as characters string type\n",
+    "    \n",
+    "    For datetime conversion performance, see:\n",
+    "    See https://stackoverflow.com/questions/40881876/python-pandas-convert-datetime-to-timestamp-effectively-through-dt-accessor\n",
+    "    \"\"\"\n",
+    "    formats = (\"%m/%d/%y %H:%M:%S\", \"%m/%d/%y %I:%M:%S %p\",\n",
+    "               \"%d/%m/%y %H:%M\",    \"%d/%m/%y %I:%M %p\",\n",
+    "               \"%m/%d/%Y %H:%M:%S\", \"%m/%d/%Y %I:%M:%S %p\", \n",
+    "               \"%d/%m/%Y %H:%M\",    \"%d/%m/%Y %I:%M %p\",\n",
+    "               \"%y/%m/%d %H:%M:%S\", \"%y/%m/%d %I:%M:%S %p\", \n",
+    "               \"%y/%m/%d %H:%M\",    \"%y/%m/%d %I:%M %p\",\n",
+    "               \"%Y/%m/%d %H:%M:%S\", \"%Y/%m/%d %I:%M:%S %p\", \n",
+    "               \"%Y/%m/%d %H:%M\",    \"%Y/%m/%d %I:%M %p\",\n",
+    "               \"%d-%m-%Y %H:%M\",  \"%m-%d-%Y %H:%M\",\n",
+    "\n",
+    "               None)\n",
+    "    times = df[df.columns[0]]\n",
+    "    for f in formats:\n",
+    "        try:\n",
+    "            # Convert strings to datetime objects\n",
+    "            new_times = pd.to_datetime(times, format=f)\n",
+    "            # Convert datetime series to numpy array of integers (timestamps)\n",
+    "            new_ts = new_times.values.astype(np.int64)\n",
+    "            # If times are not ordered, this is not the appropriate format\n",
+    "            test = np.sort(new_ts) - new_ts\n",
+    "            if np.sum(abs(test)) != 0 :\n",
+    "                #print(\"Order is not the same\")\n",
+    "                raise ValueError()\n",
+    "            # Else, the conversion is a success\n",
+    "            #print(\"Found format \", f)\n",
+    "            df[df.columns[0]] = new_times\n",
+    "            return\n",
+    "        \n",
+    "        except ValueError:\n",
+    "            #print(\"Format \", f, \" not valid\")\n",
+    "            continue\n",
+    "    \n",
+    "    # None of the known format are valid\n",
+    "    raise ValueError(\"Cannot convert dates: No known formats match your data!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#path \n",
+    "\n",
+    "path = 'C:/Users/alexa/2A/MOLONARI1D/dataAnalysis/data_traite'\n",
+    "\n",
+    "#Point considéré\n",
+    "\n",
+    "point_temperature = 'point46_temperature_traité.csv'\n",
+    "\n",
+    "#Définition d'un dictionnaire pour les données \n",
+    "\n",
+    "dico = {}\n",
+    "dico['chemin temperature'] = os.path.join(path, point_temperature)\n",
+    "\n",
+    "\n",
+    "temperature = read_csv(dico['chemin temperature'])\n",
+    "\n",
+    "temperature['Temp_profondeur_10'] = temperature['Temp_profondeur_10'] + ZERO_CELSIUS\n",
+    "temperature['Temp_profondeur_20'] = temperature['Temp_profondeur_20'] + ZERO_CELSIUS\n",
+    "temperature['Temp_profondeur_30'] = temperature['Temp_profondeur_30'] + ZERO_CELSIUS\n",
+    "temperature['Temp_profondeur_40'] = temperature['Temp_profondeur_40'] + ZERO_CELSIUS\n",
+    "\n",
+    "#Conversion des dates en datetime   \n",
+    "\n",
+    "convertDates(temperature)\n",
+    "\n",
+    "dico['temperature'] = temperature\n",
+    "\n",
+    "#Affichage des données\n",
+    "\n",
+    "dico['temperature'].columns = ['dates', 'T_10', 'T_20', 'T_30', 'T_40']\n",
+    "\n",
+    "#Création des colonnes de date et de données pour initialiser l'objet time_series_multiperiodic\n",
+    "\n",
+    "dates = dico['temperature']['dates'].to_numpy()\n",
+    "data_temperature = dico['temperature'][['T_10', 'T_20', 'T_30', 'T_40']].to_numpy()\n",
+    "\n",
+    "print(dates[:5], data_temperature[:5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Création de l'objet time_series_multiperiodic\n",
+    "\n",
+    "dt = 15*NSECINMIN\n",
+    "depth_sensor = DEFAULT_sensor_depth\n",
+    "\n",
+    "ts = time_series_multiperiodic('ts')\n",
+    "\n",
+    "ts.values_time_series(dates, data_temperature, dt, depth_sensors=depth_sensor)"
    ]
   }
  ],
@@ -32,7 +160,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
