commit before testing

--- a/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
+++ b/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
@@ -149,7 +149,8 @@
     "\n",
     "ts = time_series_multiperiodic('ts')\n",
     "\n",
-    "ts.values_time_series(dates, data_temperature, dt, depth_sensors=depth_sensor)"
+    "ts.values_time_series(dates, data_temperature, dt, depth_sensors=depth_sensor)\n",
+    "ts.plot_pearson_coef()\n"
    ]
   }
  ],
