printing sigma2 T, sigma2 min max, default in config.py, verifying good functioning with 6, 10 and 20 chains

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -31,7 +31,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n"
+    "\n",
+    "NBCELL = 50\n",
+    "NBCHAINS = 20\n",
+    "DELTA = 4\n",
+    "NCR = 3\n",
+    "NBITER = 500\n",
+    "NBITERMCMC = 50"
    ]
   },
   {
@@ -235,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.compute_solve_transi(params, nb_cells=100)"
+    "col.compute_solve_transi(params, nb_cells=NBCELL)"
    ]
   },
   {
@@ -307,14 +313,14 @@
     "]\n",
     "col.compute_mcmc(\n",
     "    all_priors = all_priors,\n",
-    "    nb_cells = 100,\n",
+    "    nb_cells = NBCELL,\n",
     "    verbose=False,\n",
-    "    nb_iter=500,\n",
+    "    nb_iter=NBITER,\n",
     "    nb_chain=1,\n",
     ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
-    "col.compute_solve_transi(bestLayers, nb_cells=100,verbose=False)\n",
+    "col.compute_solve_transi(bestLayers, nb_cells=NBCELL,verbose=False)\n",
     "col.plot_all_results()"
    ]
   },
@@ -384,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.compute_solve_transi(layers_list, nb_cells=100,verbose=False)\n",
+    "col.compute_solve_transi(layers_list, nb_cells=NBCELL,verbose=False)\n",
     "\n",
     "col.print_RMSE_at_sensor()\n",
     "col.plot_compare_temperatures_sensors()\n",
@@ -452,9 +458,9 @@
    "source": [
     "col.compute_mcmc(\n",
     "\tall_priors=all_priors,\n",
-    "\tnb_cells=100,\n",
+    "\tnb_cells=NBCELL,\n",
     "\tverbose=False,\n",
-    "\tnb_iter=500,\n",
+    "\tnb_iter=NBITER,\n",
     "\tnb_chain=1\n",
     ")"
    ]
@@ -482,7 +488,7 @@
    "outputs": [],
    "source": [
     "bestLayers = col.get_best_layers()\n",
-    "col.compute_solve_transi(bestLayers, nb_cells=100,verbose=False)\n",
+    "col.compute_solve_transi(bestLayers, nb_cells=NBCELL,verbose=False)\n",
     "col.plot_all_results()\n",
     "col.plot_darcy_flow_quantile()\n",
     "col.plot_quantile_temperatures_sensors()"
@@ -527,19 +533,36 @@
     "\n",
     "col.compute_mcmc(\n",
     "    all_priors = all_priors,\n",
-    "    nb_cells = 100,\n",
-    "    nb_iter=200,\n",
-    "    nb_chain=10,\n",
+    "    nb_cells = NBCELL,\n",
+    "    nb_iter=NBITERMCMC,\n",
+    "    nb_chain=NBCHAINS,\n",
     "    verbose=False,\n",
     "    typealgo=\"with sigma\"\n",
     ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
-    "col.compute_solve_transi(bestLayers, nb_cells=100,verbose=False)\n",
+    "col.compute_solve_transi(bestLayers, nb_cells=NBCELL,verbose=False)\n",
     "col.plot_all_param_pdf()\n",
     "col.plot_all_results()\n",
     "col.plot_darcy_flow_quantile()\n",
     "col.plot_quantile_temperatures_sensors()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "recupérer la valeur finale de sigma2 sur les obs et sa distrib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma2=col.get_best_sigma2()\n",
+    "print(f\"Variance of the temperature measurment error : {sigma2}°C\")"
    ]
   }
  ],
