notebook working, able to plot pearson coef for data in data_traité.

--- a/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
+++ b/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
@@ -103,7 +103,7 @@
     "\n",
     "#Point considéré\n",
     "\n",
-    "point_temperature = 'point46_temperature_traité.csv'\n",
+    "point_temperature = 'point52_temperature_traité.csv'\n",
     "\n",
     "#Définition d'un dictionnaire pour les données \n",
     "\n",
@@ -150,6 +150,7 @@
     "ts = time_series_multiperiodic('ts')\n",
     "\n",
     "ts.values_time_series(dates, data_temperature, dt, depth_sensors=depth_sensor)\n",
+    "ts.plot_temp_river()\n",
     "ts.plot_pearson_coef()\n"
    ]
   }
