add acceptance print statement in demo notebook

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -36,7 +36,7 @@
     "NBCHAINS = 20\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITER = 500\n",
+    "NBITER = 1500\n",
     "NBITERMCMC = 50"
    ]
   },
@@ -321,6 +321,8 @@
     "\n",
     "bestLayers = col.get_best_layers()\n",
     "col.compute_solve_transi(bestLayers, nb_cells=NBCELL,verbose=False)\n",
+    "col.plot_all_param_pdf()\n",
+    "print(f\"acceptance : {col._acceptance[-1]}\")\n",
     "col.plot_all_results()"
    ]
   },
